--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   date_time_format: ^2.0.1
   logger: ^2.5.0
   http: ^1.3.0
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
