--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   logger: ^2.5.0
   http: ^1.3.0
   shared_preferences: ^2.5.3
+  email_validator: ^3.0.0
 
 dev_dependencies:
   flutter_test:
